Let's invert our colors for fun. :)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <style>
+      body {
+        background: black;
+        color: white;
+      }
+
       #map {
         width: 800px;
         height: 380px;
